# eda

./: Cargo.toml
crates/ffprobe/: Cargo.toml
crates/ffprobe/src/: lib.rs  parse_float.rs  parse_int.rs
crates/ffprobe/tests/: ffprobe_parse.rs
crates/ffprobe/tests/video_assets/: video_mkv_h265.mkv
crates/media-discovery/: Cargo.toml
crates/media-discovery/src/: lib.rs
crates/media-discovery/src/models/: library.rs  mod.rs  movie.rs  series.rs  version.rs
crates/media-discovery/src/parser/: episode_parser.rs  mod.rs
crates/media-discovery/src/service/: mod.rs
crates/media-discovery/src/service/library_discovery/: fs_library_discovery_service.rs  library_discovery_service.rs  mod.rs
