[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
walkdir = "2.5.0"
regex = "1.12.2"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"]}
eda-ffprobe = { path = "crates/ffprobe" }
tokio = { version = "1.49.0", features = ["full"] }